# Applied-Machine-Learning-in-Python

./: Module 1.ipynb  README.md  pyproject.toml
Week 1/: Assignment 1.ipynb  README.md
