[tool.poetry]
name = "applied-machine-learning-in-python"
version = "0.1.0"
description = ""
authors = ["Jeremy <jeremytee97@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^1.0.2"
pandas = "^1.4.2"
matplotlib = "^3.5.1"
ipykernel = "^6.13.0"
ipywidgets = "^7.7.0"
ipympl = "^0.9.0"
seaborn = "^0.11.2"
graphviz = "^0.20"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
